--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace 'com.hashmac.islam360'
+    namespace 'com.example.islam360'
     compileSdkVersion 33
 
     buildToolsVersion "30.0.3"
