--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     buildToolsVersion "30.0.3"
     defaultConfig {
-        applicationId 'com.hashmac.islam360'
+        applicationId 'com.example.islam360'
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 6
